[gd_scene load_steps=4 format=3 uid="uid://bccq8nsjuh4yc"]

[ext_resource type="Script" path="res://scripts/obstacles/obstacle_fishing_net.gd" id="2_fyws0"]
[ext_resource type="Texture2D" uid="uid://db4s47d7v50k4" path="res://assets/sprites/Dungeon_Tileset.png" id="3_ixnvw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rqjfv"]
radius = 7.61459
height = 25.2439

[node name="ObstacleFishingNet" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_fyws0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_ixnvw")
region_enabled = true
region_rect = Rect2(64, 96, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2)
rotation = -0.586113
shape = SubResource("CapsuleShape2D_rqjfv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
